[package]

name = "wire"
version = "0.0.10"
authors = ["TyOverby <ty@pre-alpha.com>"]

repository = "https://github.com/TyOverby/wire"
documentation = "http://tyoverby.com/wire/wire/index.html"
keywords = ["tcp", "serialization", "encode", "network"]
license = "MIT"
description = "An abstraction over TCP and struct serialization"

[dependencies]
bincode = "*"
rustc-serialize = "*"
unreliable-message = "0.0.1"
bchannel = "0.0.9"
