[package]

name = "wire"
version = "0.0.12"
authors = ["TyOverby <ty@pre-alpha.com>"]

repository = "https://github.com/TyOverby/wire"
documentation = "http://tyoverby.com/wire/wire/index.html"
keywords = ["tcp", "serialization", "encode", "network"]
license = "MIT"
description = "An abstraction over TCP and struct serialization"

[dependencies]
bincode = "0.5.*"
rustc-serialize = "0.3.*"
unreliable-message = "0.1.0"
bchannel = "0.0.*"
